2012-12-23  Simson Garfinkel  <simsong@Mucha.local>

	* src/tcpdemux.cpp (tcpdemux::process_tcp): option output_enabled changed to store_output

2012-12-22  Simson Garfinkel  <simsong@Mucha.local>

	* src/be13_api/sbuf.cpp (sbuf_t::map_file): 

	* src/scan_http.cpp (scan_http_cbo::on_headers_complete): changed retrying_open to open() to eliminate dependency on tcpdemux

	* src/tcpip.h: put in its own file

	* src/util.cpp (mmap): moved fake mmap() cover to util.cpp

	* src/tcpip.cpp (tcpip): no longer closes the file at the end of every tcpip and then re-opens it if there is post-processing. Now it re-uses the same fd.
	(tcpip): renamed opt_after_header to opt_post_processing

2012-12-18  Simson Garfinkel  <simsong@Mucha.local>

	* src/tcpflow.cpp (main): fixed opt_all; it was always true, but it shoudln't be.

2012-12-16  Simson Garfinkel  <simsong@Mucha.local>

	* src/tcpdemux.h (class tcpdemux): removed write_to_file
	(class tcpdemux): removed struct packet_info_t
	* src/tcpdemux.cpp (tcpdemux::post_process_capture_flow): added delete of sbuf

	* src/scan_http.cpp (scan_http_cbo::on_headers_complete): changed O_APPEND to O_TRUNC

	* src/tcpdemux.cpp: removed process_gzip, since it is now done in scan_http

2012-12-07  Simson Garfinkel  <simsong@Mucha.local>

	* src/tcpdemux.h (class flow_addr): fixed operator< type 

2012-11-17  Simson Garfinkel  <simsong@npsair.local>

	* src/tcpflow.cpp (usage): usage now goes to stdout and not stderr.

2012-11-15  Simson Garfinkel  <simsong@npsair.local>

	* src/tcpdemux.h (class tcpdemux): retrying_open now takes a std:;string

2012-11-14  Simson Garfinkel  <simsong@npsair.local>

	* src/tcpip.cpp (tcpip::store_packet): added bytes_processed addition so that <fileobject> <filesize> is properly updated.

	* src/be13_api/bulk_extractor_i.h: renamed histograms to be feature_histograms

	* src/plugin.cpp (process_sbuf): renamed process_extract to process_sbuf and put it here.
