@@ -26,6 +26,7 @@
 #endif
 
 std::string flow::filename_template("%A.%a-%B.%b%V%v%C%c");
+std::string flow::outdir(".");
 
 void flow::usage()
 {
@@ -38,9 +39,16 @@ void flow::usage()
     std::cout << "\n";
 }
 
-std::string flow::filename()
+std::string flow::filename_for_connection_count(uint32_t connection_count)
 {
+    bool used_cc=false;
     std::stringstream ss;
+
+    /* Add the outdir */
+    if(flow::outdir!="." && flow::outdir!=""){
+        ss << flow::outdir;
+        ss << '/';
+    }
 
     for(unsigned int i=0;i<filename_template.size();i++){
 	switch(filename_template.at(i)){
@@ -97,9 +105,11 @@ std::string flow::filename()
 		break;
 	    case 'C': // 'c' if connection_count >0
 		if(connection_count>0) ss << "c";
+                used_cc = true;
 		break;
 	    case 'c': // connection_count if connection_count >0
 		if(connection_count>0) ss << connection_count;
+                used_cc = true;
 		break;
 	    case '#': // always output connection count
 		ss << connection_count;
@@ -115,5 +125,20 @@ std::string flow::filename()
 	    if(buf[0]) ss << buf;
 	}
     }
+    if(used_cc==false){
+        std::cerr << "filename template MUST include %c or %C\n";
+        exit(1);
+    }
     return ss.str();
+}
+
+
+std::string flow::new_filename()
+{
+    /* Loop connection count until we find a file that doesn't exist */
+    for(uint32_t connection_count=0;;connection_count++){
+        std::string filename = filename_for_connection_count(connection_count);
+        if(access(filename.c_str(),F_OK)!=0) return filename;
+    }
+    return std::string("<<CANNOT CREATE FILE>>");               // error; no file
 }
